2008-08-14	Dmitry Dulepov	<dmitry@typo3.org>

	* Added more methods to determine root page id

2008-05-26	Dmitry Dulepov	<dmitry@typo3.org>

	* New feature: reapply config.absRefPrefix to URL if configured so
	* Added information to the manual about removing empty segments

2008-05-23	Dmitry Dulepov	<dmitry@typo3.org>

	* New feature: remove postVar segment completely if it it produces only empty values

2008-05-14	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #8406: config.absRefPrefix crashes realurl

2008-04-29	Dmitry Dulepov	<dmitry@typo3.org>

	* Added compatibility with 4.2 (bugs #8026, #7941)
	* Added handling of nested domains
	* Added an option to enable/disable devLog without using Install tool (see also bug #8125)
	* Moved locallang*.php to locallang*.xml (see #6911)
	* Release of version 1.3.2

2008-03-17	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed wrong spelling of RealURL everywhere in the manual

2008-03-10	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #6567: autoconfgeneration create wrong config for defaultToHTMLsuffixOnPrev and acceptHTMLsuffix
	* Fixed problem: fatal error in BE when sysfolder/shortcut/MP is renamed
	* Release of version 1.3.0
	* Fix for PHP4 error in BE
	* Release of version 1.3.1

2008-03-06  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #7486: tx_realurl_pathsegment is now exclude field
	* Fixed: _DEFAULT was ignored in TCEmain hook
	* Change path expiration behavior

2008-03-05  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #6952: expireDays is not set correctly
	* Fixed bug #6416: if autoUpdatePathCache is true old urls are redirected not as 301
	* Added TCEMain hook to update path cache if page is renamed

2008-02-06  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed error #6849: Error on 404/Page Not Found
	* Updated function index with extdeveval

2008-01-18  Dmitry Dulepov  <dmitry@typo3.org>

 * Added eol-style property for all text files
 * Fixed another incarnation of postVarSet issue
